# rvm

./: .gitignore  Cargo.toml  LICENSE  README.md  compare
.github/workflows/: build.yml
java-tests/: README.md  build.gradle  settings.gradle
java-tests/codeformat/: codeformat.xml
java-tests/src/main/java/: Intrinsics.java
libs/rvm-bind/: Cargo.toml
libs/rvm-bind/src/: args.rs  class.rs  lib.rs  package.rs  ret.rs
libs/rvm-class/: Cargo.toml
libs/rvm-class/src/: lib.rs  loader.rs  source.rs
libs/rvm-consts/: Cargo.toml
libs/rvm-consts/src/: lib.rs
libs/rvm-core/: Cargo.toml
libs/rvm-core/src/: lib.rs  ref.rs  storage.rs  utils.rs
libs/rvm-engine-ben/: Cargo.toml
libs/rvm-engine-ben/src/: lib.rs  method.rs  value.rs
libs/rvm-engine-ben/src/code/: executor.rs  mod.rs
libs/rvm-engine-ben/src/code/task/: array.rs  call.rs  combine.rs  const.rs  field.rs  increment.rs  jump.rs  local.rs  mod.rs  object.rs  return.rs  stack.rs  switch.rs
libs/rvm-engine-ben/src/thread/: frame.rs  mod.rs  stack.rs
libs/rvm-engine-llvm/: Cargo.toml
libs/rvm-engine-llvm/src/: block.rs  compiler.rs  lib.rs  op.rs  resolver.rs  util.rs
libs/rvm-engine-llvm/src/op/: apply.rs  check.rs  combine.rs  compare.rs  constant.rs  conversion.rs  invoke.rs  jump.rs  ret.rs  stack.rs  variable.rs
libs/rvm-execute/: Cargo.toml
libs/rvm-execute-llvm/: Cargo.toml
libs/rvm-execute-llvm/src/: block.rs  compiler.rs  executor.rs  ir_gen.rs  lib.rs  op.rs  resolver.rs
libs/rvm-execute-llvm/src/op/: apply.rs  check.rs  combine.rs  compare.rs  constant.rs  conversion.rs  invoke.rs  jump.rs  ret.rs  stack.rs  variable.rs
libs/rvm-execute/src/: lib.rs
libs/rvm-gc/: Cargo.toml
libs/rvm-gc/src/: collector.rs  header.rs  lib.rs  object.rs  reference.rs  sweeper.rs
libs/rvm-macro/: Cargo.toml
libs/rvm-macro/src/: desc.rs  jni.rs  lib.rs
libs/rvm-macro/tests/: hi.rs
libs/rvm-object/: Cargo.toml
libs/rvm-object/src/: array.rs  class_loader.rs  lib.rs  object.rs
libs/rvm-object/src/class/: array.rs  mod.rs
libs/rvm-object/src/class/object/: field.rs  method.rs  mod.rs
libs/rvm-object/src/reference/: array.rs  class.rs  mod.rs
libs/rvm-object/src/value/: mod.rs  reference.rs
libs/rvm-reader/: Cargo.toml
libs/rvm-reader/src/: attribute.rs  class.rs  error.rs  field.rs  lib.rs  method.rs
libs/rvm-reader/src/code/: inst.rs  mod.rs  op.rs
libs/rvm-reader/src/consts/: class.rs  dynamic.rs  field.rs  interface.rs  method.rs  mod.rs  name_and_type.rs  number.rs  string.rs  utf_8.rs
libs/rvm-runtime/: Cargo.toml
libs/rvm-runtime/src/: binding.rs  class_loader.rs  convert.rs  engine.rs  error.rs  gc.rs  lib.rs  prelude.rs  thread.rs  value.rs
libs/rvm-runtime/src/arena/: active_plan.rs  collection.rs  mod.rs  object_model.rs  reference_glue.rs  scanning.rs
libs/rvm-runtime/src/arena/object/: mod.rs
libs/rvm-runtime/src/bind/: mod.rs
libs/rvm-runtime/src/class/: array.rs  field.rs  method.rs  mod.rs  object.rs
libs/rvm-runtime/src/compiler/: block.rs  compiler.rs  ir_gen.rs  mod.rs  op.rs  resolver.rs  util.rs
libs/rvm-runtime/src/compiler/op/: apply.rs  check.rs  combine.rs  compare.rs  constant.rs  conversion.rs  invoke.rs  jump.rs  ret.rs  stack.rs  variable.rs
libs/rvm-runtime/src/conversion/: mod.rs  multi.rs
libs/rvm-runtime/src/executor/: frame.rs  instruction.rs  locals.rs  method.rs  mod.rs  stack.rs
libs/rvm-runtime/src/gc/: chunk.rs  mod.rs  object.rs  root.rs  sweep.rs  unwindable.rs
libs/rvm-runtime/src/native/: env.rs  function.rs  link.rs  mod.rs
libs/rvm-runtime/src/object/: bindable.rs  class.rs  class_loader.rs  field.rs  method.rs  mod.rs  reference.rs  value.rs
libs/rvm-runtime/src/object/array/: class.rs  mod.rs  object.rs
libs/rvm-runtime/src/object/class_loader/: mod.rs  source.rs
libs/rvm-runtime/src/object/instance/: class.rs  field.rs  mod.rs  object.rs
libs/rvm-runtime/src/object/instance/class/: field.rs  method.rs  mod.rs
libs/rvm-runtime/src/object/instance/method/: binding.rs  mod.rs
libs/rvm-runtime/src/object/instance/object/: binding.rs  field.rs  mod.rs
libs/rvm-runtime/src/reader/: attribute.rs  class.rs  code.rs  consts.rs  descriptor.rs  field.rs  method.rs  mod.rs  name.rs
libs/rvm-runtime/src/reader/consts/: class.rs  field.rs  interface.rs  method.rs  name_and_type.rs  number.rs  string.rs  utf_8.rs
libs/rvm-sdk/: Cargo.toml
libs/rvm-stack/: Cargo.toml
libs/rvm-stack/src/: iter.rs  lib.rs  ticket.rs  value.rs
libs/rvm-tests/: Cargo.toml  build.rs
libs/rvm-tests/src/: bindings.rs  lib.rs
libs/rvm-tests/src/core/: Assert.java  mod.rs
libs/rvm-tests/src/testing/: Testing.java  consts.rs  mod.rs
libs/rvm-tests/src/testing/array/: ArrayTest.java  ArrayTests.rs  mod.rs
libs/rvm-tests/src/testing/math/: mod.rs  sub_int
libs/rvm-tests/src/testing/object/: Animal.java  mod.rs
libs/rvm-tests/src/testing/rni/: mod.rs
libs/rvm-tests/src/tests/: Assert.java  ackermann.rs  assert.rs  consts.rs  floats.rs  integers.rs  mod.rs
libs/rvm-tests/src/tests/ackermann/: Ackermann.java  mod.rs
libs/rvm-tests/src/tests/argument_order/: Java.java
libs/rvm-tests/src/tests/array/: ArrayTest.java  mod.rs
libs/rvm-tests/src/tests/constants/: ConstantTests.java  mod.rs
libs/rvm-tests/src/tests/control_flow/: Java.java  simple.rs
libs/rvm-tests/src/tests/exception/: Java.java  mod.rs
libs/rvm-tests/src/tests/floats/: Java.java  mod.rs
libs/rvm-tests/src/tests/integers/: Java.java  mod.rs
libs/rvm-tests/src/tests/jni/: Main.java  mod.rs
libs/rvm-tests/src/tests/math/: MathTests.java  add_int  mod.rs
libs/rvm-tests/src/tests/object/: Animal.java  Dog.java  ExtendTest.java  ExtendedObject.java  Fruit.java  InterfaceTest.java  ObjectTest.java  ObjectTests.java  SimpleObject.java  mod.rs
libs/rvm-tests/src/tests/rni/: RniTests.java  mod.rs
libs/rvm-tests/src/tests/statics/: Java.java  mod.rs
libs/rvm-tests/src/tests/string/: Java.java  mod.rs
libs/rvm-tests/src/tests/switch_statement/: SwitchTest.java  mod.rs
src/: main.rs  variable.rs
src/interop/: mod.rs
(+14 files in other folders)
