[package]
name = "rvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }

rvm-core = { path = "./libs/rvm-core" }
rvm-runtime = { path = "./libs/rvm-runtime" }
rvm-bind = { path = "./libs/rvm-bind" }
anyways = "0.3"
bitflags = "1.3.2"
tracing = "0.1"

[workspace]
members = [
    "./libs/rvm-bind",
    "./libs/rvm-core",
    "./libs/rvm-consts",
    "./libs/rvm-runtime",
    "./libs/rvm-tests",
]
