[package]
name = "rvm-bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvm-core = { path = "../rvm-core" }
rvm-reader = { path = "../rvm-reader" }
rvm-class = { path = "../rvm-class" }

eyre = "0.6"

syn = "2"
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"

convert_case = "0.6.0"


[lib]
