[package]
name = "rvm-engine-ben"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvm-core = { path = "../rvm-core" }
rvm-reader = { path = "../rvm-reader" }
rvm-runtime = { path = "../rvm-runtime" }

stackalloc = "1.2.0"
backtrace = "0.3.67"
crossbeam = "0.8.2"

tracing = "0.1"
