[package]
name = "rvm-engine-ben"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvm-core = { path = "../rvm-core" }
rvm-reader = { path = "../rvm-reader" }
rvm-runtime = { path = "../rvm-runtime" }
rvm-stack = { path = "../rvm-stack" }

eyre = "0.6"
stackalloc = "1"
backtrace = "0.3"
crossbeam = "0.8"
num-traits = "0.2"
bytemuck = { version = "1", features = ["derive"] }
derive_more = { version = "1", features = ["from"] }

tracing = "0.1"
either = "1"
