[package]
name = "rvm-object"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvm-core = { path = "../rvm-core" }
rvm-reader = { path = "../rvm-reader" }

tracing = "0.1"
ahash = "0.8"
anyways = "0.3"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }