[package]
name = "rvm-object"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvm-core = { path = "../rvm-core" }
rvm-reader = { path = "../rvm-reader" }

anyways = "0.3"
either = "1.8.0"
ahash = "0.8"
tracing = "0.1"
zip = "0.6"
base64 = "0.13"
mmtk = "0.16.0"

parking_lot = { version = "0.12", features = ["deadlock_detection"] }
