[package]
name = "rvm-object"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvm-core = { path = "../rvm-core" }
rvm-reader = { path = "../rvm-reader" }

thiserror = "1.0.44"
nom = "7.1"

anyways = "0.3"
either = "1.8.0"
ahash = "0.8"
tracing = "0.1"
zip = "0.6"
base64 = "0.13"
const_format = "0.2.31"

parking_lot = { version = "0.12", features = ["deadlock_detection"] }
