[package]
name = "rvm-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvm-core = { path = "../rvm-core" }

nom = "7"

eyre = "0.6"

tracing = "0.1"
num-traits = "0.2"
num-derive = "0.4"

mutf8 = "0.5"
