[package]
name = "rvm-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvm-core = { path = "../rvm-core" }
rvm-reader = { path = "../rvm-reader" }

# Compilation
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }

either = "1.8.0"
thiserror = "1"
anyways = "0.3"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
mimalloc = "0.1"
base64 = "0.13"
bitflags = "1.3.2"
dot-writer = "0.1"
ahash = "0.8"
tracing = "0.1"
zip = "0.6"
nom = "7.1"
jni-sys = { version = "0.3.0", optional = true }

[features]
native = ["dep:jni-sys"]
default = []
