[package]
name = "rvm-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvm-core = { path = "../rvm-core" }
rvm-reader = { path = "../rvm-reader" }
rvm-macro = { path = "../rvm-macro" }

# Compilation
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }

eyre = "0.6"
crossbeam = "0.8"
lazy_static = "1"
either = "1"
thiserror = "1"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
mimalloc = "0.1"
base64 = "0.22"
bitflags = "2"
dot-writer = "0.1"
ahash = "0.8"
tracing = "0.1"
zip = "2"
nom = "7"
jni-sys = { version = "0.4" }
libloading = "0.8"
[features]
default = []
