[package]
name = "rvm-tests"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
rvm-core = { path = "../rvm-core" }
rvm-runtime = { path = "../rvm-runtime" }
rvm-macro = { path = "../rvm-macro" }
rvm-engine-ben = { path = "../rvm-engine-ben" }

walkdir = "2.3.2"
num-traits = "0.2.16"
eyre = "0.6"
tracing = "0.1"

[build-dependencies]
rvm-core = { path = "../rvm-core" }
rvm-reader = { path = "../rvm-reader" }

rust-format = "0.3"